--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/ntnbrtnkv/frontend-project-setup/issues"
   },
-  "homepage": "https://github.com/ntnbrtnkv/frontend-project-setup#readme"
+  "homepage": "https://github.com/ntnbrtnkv/frontend-project-setup#readme",
+  "devDependencies": {
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
+  },
+  "dependencies": {
+    "jquery": "^3.5.1"
+  }
 }
