--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "1. [Node](https://nodejs.org/en/)\r 2. Npm (по-умолчанию ставится вместое с node)",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production",
+    "start": "nodemon --exec webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -17,8 +18,10 @@
   },
   "homepage": "https://github.com/ntnbrtnkv/frontend-project-setup#readme",
   "devDependencies": {
+    "nodemon": "^2.0.4",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "jquery": "^3.5.1"
