--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/ntnbrtnkv/frontend-project-setup#readme",
   "devDependencies": {
     "nodemon": "^2.0.4",
+    "css-loader": "^3.6.0",
     "html-webpack-plugin": "^4.3.0",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
