--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "nodemon": "^2.0.4",
     "css-loader": "^3.6.0",
     "html-webpack-plugin": "^4.3.0",
-    "style-loader": "^1.2.1",
+    "mini-css-extract-plugin": "^0.9.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
