--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode=production",
-    "start": "nodemon --exec webpack-dev-server"
+    "start": "nodemon --exec webpack-dev-server",
+    "lint": "eslint ./src --ext .js,.jsx",
+    "lint:fix": "eslint --fix ./src --ext .js,.jsx"
   },
   "repository": {
     "type": "git",
@@ -23,8 +25,11 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "autoprefixer": "^9.8.5",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.6.0",
+    "eslint": "^7.5.0",
+    "eslint-plugin-react": "^7.20.3",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
